<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dkhp"
            android:icon="@drawable/img_dkhp"
            android:title="@string/menu_dkhp" />
        <item
            android:id="@+id/nav_tracuu"
            android:icon="@drawable/img_search"
            android:title="@string/menu_tracuu" />
        <item
            android:id="@+id/nav_lsdkhp"
            android:icon="@drawable/img_history"
            android:title="@string/menu_lsdkhp" />
        <item
            android:id="@+id/nav_dxuat"
            android:icon="@drawable/img_logout"
            android:title="@string/menu_dxuat" />
        <item
            android:id="@+id/nav_hpdadk"
            android:title="@string/menu_hpdadk"
            android:visible="false" />
    </group>
</menu>